@@ -134,6 +134,7 @@ dfhack_plugin(misery misery.cpp)
 #dfhack_plugin(mode mode.cpp)
 #dfhack_plugin(mousequery mousequery.cpp)
 dfhack_plugin(nestboxes nestboxes.cpp)
+dfhack_plugin(autoslab autoslab.cpp)
 dfhack_plugin(orders orders.cpp LINK_LIBRARIES jsoncpp_static lua)
 dfhack_plugin(overlay overlay.cpp LINK_LIBRARIES lua)
 dfhack_plugin(pathable pathable.cpp LINK_LIBRARIES lua)
